# analyzere-python-examples

./: README.md
API with Python Sample/: Prime Python API Overview.ipynb  README.md
Optimization Sample/: Python Optimization.ipynb  README.md
batch_upload/: README.md  config.ini  logging.ini  pyproject.toml
batch_upload/retrievers/: sql_data_retriever.py
batch_upload/sample_data/: config.ini  layer_structures_no_reinstatements.csv
batch_upload/uploaders/: are_uploader.py
bulk_uploader/: README.md  batch_upload.py  bulk_upload.py  config.ini  config.py  pyproject.toml  readme.rst  requirements.txt
bulk_uploader/config/: config.ini
bulk_uploader/data_parser/: config.py  config_parser.py  layer_parser.py  loss_parser.py
bulk_uploader/data_retriever/: csv_data_retriever.py  sql_data_retriever.py
bulk_uploader/data_uploader/: are_uploader.py
bulk_uploader/extractors/: layer.py  loss_set.py
bulk_uploader/retrievers/: csv_data_retriever.py  sql_data_retriever.py
bulk_uploader/sample_data/: create_layers.sql  create_yeltlosses.sql  elt_losses.csv  layer_structures_reinstatements_style_1.csv  layer_structures_reinstatements_style_2.csv
bulk_uploader/uploaders/: are_uploader.py
event_response_tool/: Event Response Tool.ipynb  README.md  event_response.py  logging.ini  pyproject.toml
event_response_tool/ap_creator/: create_ap.py
event_response_tool/config/: event_response_config.ini
event_response_tool/layer_loss_duplicator/: duplicate_layer_loss.py
event_response_tool/utils/: alert.py  are_resources.py  file_handler.py
