[tool.poetry]
name = "batch_uploader"
version = "0.1.0"
description = ""
authors = ["Analyze Re Developers"]

[tool.poetry.dependencies]
python = "^3.9"
analyzere = "^0.6.0"
pandas = "^1.4.4"
numpy = "^1.23.3"
python-dateutil = "^2.8.2"
black = "^22.8.0"
pyodbc = "^4.0.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78
